Fix: Nav should stay visible upon scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,4 @@ body {
 #root {
   width: 100%;
   position: relative;
-  overflow: hidden;
 }
